# vulkan-practices

./: .gitignore  .gitmodules  CMakeLists.txt  vulkan_practices.cpp
engine/: CMakeLists.txt  application.cpp  application.h  helpers.h  shared.h
engine/glfw/: window.cpp  window.h
engine/wrapper/glfw/: window.cpp  window.h
engine/wrapper/vk/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  device.cpp  device.h  instance.cpp  instance.h  physical_device.cpp  physical_device.h  structs.h  surface.cpp  surface.h  swap_chain.cpp  swap_chain.h
resources/shaders/: compile.bat
